[project]
name = "nightvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.6",
    "kornia>=0.8.1",
    "opencv-python>=4.11.0.86",
    "tifffile>=2025.5.10",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.128",
]
